change gtest-lib path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,40 +1,65 @@
-# shm_create shm_attach shm_close shm_lock shm_unlock
-# sema_create sema_attach sema_close sema_post sema_wait sema_waitfor
-# 
+
 cmake_minimum_required(VERSION 3.10)
 
 # set(CMAKE_C_COMPILER /home/huashi/mysoft/a40i-hmi/ext-toolchain-it7070ei/bin/arm-linux-gnueabihf-gcc)
 # set(CMAKE_CXX_COMPILER /home/huashi/mysoft/a40i-hmi/ext-toolchain-it7070ei/bin/arm-linux-gnueabihf-g++)
-# set(CMAKE_C_STANDARD 11)
+
 
 project(HSDS C CXX)
 
+# set(CMAKE_C_STANDARD 11)
 # set(CMAKE_CXX_FLAGS_RELEASE -Ofast)
 # set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall")
 # set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -Wall")
 
 
+# set include-dir,library-dir,libraries
 
-# include_directories(${CMAKE_SOURCE_DIR}/base/src)
-# add_subdirectory(base)
-# add_subdirectory(tool)
-# add_subdirectory(demo)
+if(WIN32)
+    if(CMAKE_CL_64)
+        set(PLATFORM_NAME "win64")
+    else()
+        set(PLATFORM_NAME "win32")
+    endif()
+elseif(UNIX)
+    if("${CMAKE_C_COMPILER_TARGET}" STREQUAL "arm-linux-gnueabihf")
+        set(PLATFORM_NAME "linux_arm32")
+    elseif("${CMAKE_C_COMPILER_TARGET}" STREQUAL "aarch64-linux-gnu")
+        set(PLATFORM_NAME "linux_arm64")
+    else()
+        set(PLATFORM_NAME "linux_x64")
+    endif()
+elseif(APPLE)
+    message("This is macOS.")
+endif()
 
-# for test
-enable_testing()
-
-# build
-include_directories(${CMAKE_SOURCE_DIR}/include)
-include_directories(${CMAKE_SOURCE_DIR}/3rd/include)
-
-set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}")
-add_subdirectory(src)
-add_subdirectory(test)
+message("CMAKE_C_COMPILER is ${CMAKE_C_COMPILER}")
+message("PLATFORM_NAME is ${PLATFORM_NAME}")
 
 
+# include
+include_directories(${CMAKE_SOURCE_DIR}/include 
+                    ${CMAKE_SOURCE_DIR}/3rd/include)
 
 
-# for package
+file(GLOB HSDS_SRC src/*.c)
+add_library(hsds SHARED ${HSDS_SRC})
+
+
+# install
+set(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/dist/${PLATFORM_NAME}")
+message("CMAKE_INSTALL_PREFIX is ${CMAKE_INSTALL_PREFIX}")
+install(TARGETS hsds
+    RUNTIME DESTINATION .
+    LIBRARY DESTINATION .
+    ARCHIVE DESTINATION .
+)
+
+
+
+
+
+# package
 set(CPACK_PACKAGE_NAME "HSDS")
 set(CPACK_PACKAGE_VERSION 1.0.0)
 set(CPACK_PACKAGE_VENDOR "inovance")
